# Generateur-de-phrases-auto

./: CMakeLists.txt  Creation_arbres.c  Creation_arbres.h  GIT.txt  README.md  README.txt  arbre.c  arbre.h  flechie.c  flechie.h  fonction.c  fonction.h  function.c  function.h  functions.c  functions.h  lirefichier.c  lirefichier.h  main.c  node.c  node.h  recherche_base.c  recherche_base.h  recherche_flechie.c  recherche_flechie.h  t_std.c  t_std.h
